src/services/monitor-subrooms/MonitorSubRooms/MonitorSubRooms.scss
#plugin-interpretation-monitor {
  max-height: 50%;
  overflow: hidden;
  position: relative;
  .MonitorSubRooms {
    transition: height 0.2s ease-in-out;
    max-height: 100%;
    height: 46px;
    .header {
      svg {
        font-size: 10px;
        height: 24px;
        width: 24px;
        transition: transform 0.1s ease-in-out;
      }
      padding: 10px;
      height: 46px;
      background-color: #f5f5f5;
      border-top: 1px solid #c3c3c3;
      border-bottom: 1px solid #c3c3c3;
      border-left: 0;
      border-right: 0;
      font-size: 16px;
      font-weight: bold;
      width: 100%;
      text-align: left;
      display: flex;
      align-items: center;
    }
    .content {
      text-align: center;
      height: calc(100% - 66px);
      position: relative;
      .loading {
        background-color: #4A90E2;
        height: 0.2em;
        position: absolute;
        top: 0;
        left: 0;
        transition: width 0.2s;
      }
      table {
        width: 100%;
        border-collapse: collapse;
        td {
          padding: 0.5em;
          font-size: 16px;
          position: relative;
          svg {
            width: 20px;
            height: 20px;
          }
          .tooltip {
            position: absolute;
            top: 36px;
            left: 0;
            pointer-events: none;
            color: black;
            padding: 5px 9px 6px;
            border-radius: 5px;
            font-size: 14px;
            line-height: 18px;
            background-color: #c2c3c3;
            opacity: 0;
            z-index: 1;
          }
          &:hover {
            .tooltip {
              opacity: 1;
            }
          }
          &:nth-child(2), &:nth-child(3) {width: 50%;}
        }
        tr:nth-child(even){background-color: #f2f2f2;}
      }
      .no-content {
        height: 100%;
        justify-content: center;
        align-items: center;
        display: flex;
      }
    }
    &.selected {
      height: 512px;
      .header {
        svg {
          transform: rotate(90deg);
        }
      }
    }
  }
}

